@@ -1,0 +1,15 @@
+// -*- MPC -*-
+// $Id$
+
+project(*Server): taoserver {
+  Source_Files {
+    server.cpp
+  }
+}
+
+project(*Client): taoclient {
+  Source_Files {
+    client.cpp
+    testC.cpp
+  }
+}
