@@ -1,0 +1,158 @@
+// $Id$
+
+#include "ace/Get_Opt.h"
+#include "ace/OS_NS_stdio.h"
+#include "ace/OS_NS_string.h"
+#include "testS.h"
+
+const char *ior_file = "ior";
+
+class test_i :
+  public POA_test,
+  public PortableServer::RefCountServantBase
+{
+public:
+  test_i (CORBA::ORB_ptr orb,
+          PortableServer::POA_ptr poa);
+
+  void method (ACE_ENV_SINGLE_ARG_DECL)
+    ACE_THROW_SPEC ((CORBA::SystemException));
+
+  void shutdown (ACE_ENV_SINGLE_ARG_DECL)
+    ACE_THROW_SPEC ((CORBA::SystemException));
+
+  PortableServer::POA_ptr _default_POA (ACE_ENV_SINGLE_ARG_DECL);
+
+private:
+  CORBA::ORB_var orb_;
+  PortableServer::POA_var poa_;
+};
+
+test_i::test_i (CORBA::ORB_ptr orb,
+                PortableServer::POA_ptr poa)
+  : orb_ (CORBA::ORB::_duplicate (orb)),
+    poa_ (PortableServer::POA::_duplicate (poa))
+{
+}
+
+void
+test_i::method (ACE_ENV_SINGLE_ARG_DECL_NOT_USED)
+  ACE_THROW_SPEC ((CORBA::SystemException))
+{
+  ACE_DEBUG ((LM_DEBUG,
+              "test_i::method\n"));
+}
+
+PortableServer::POA_ptr
+test_i::_default_POA (ACE_ENV_SINGLE_ARG_DECL_NOT_USED)
+{
+  return PortableServer::POA::_duplicate (this->poa_.in ());
+}
+
+void
+test_i::shutdown (ACE_ENV_SINGLE_ARG_DECL)
+  ACE_THROW_SPEC ((CORBA::SystemException))
+{
+  ACE_DEBUG ((LM_DEBUG,
+              "test_i::shutdown\n"));
+
+  this->orb_->shutdown (0
+                        ACE_ENV_ARG_PARAMETER);
+  ACE_CHECK;
+}
+
+static int
+parse_args (int argc, char **argv)
+{
+  ACE_Get_Opt get_opts (argc, argv, "f:");
+  int c;
+
+  while ((c = get_opts ()) != -1)
+    switch (c)
+      {
+      case 'f':
+        ior_file = get_opts.opt_arg ();
+        break;
+
+      default:
+        ACE_ERROR_RETURN ((LM_ERROR,
+                           "usage: %s\n"
+                           "\t-f <ior_file> (defaults to %s)\n"
+                           "\n",
+                           argv[0],
+                           ior_file),
+                          -1);
+      }
+
+  return 0;
+}
+
+int
+main (int argc, char **argv)
+{
+  ACE_TRY_NEW_ENV
+    {
+      CORBA::ORB_var orb =
+        CORBA::ORB_init (argc,
+                         argv,
+                         0
+                         ACE_ENV_ARG_PARAMETER);
+      ACE_TRY_CHECK;
+
+      int parse_args_result =
+        parse_args (argc, argv);
+      if (parse_args_result != 0)
+        return parse_args_result;
+
+      CORBA::Object_var object =
+        orb->resolve_initial_references ("RootPOA"
+                                         ACE_ENV_ARG_PARAMETER);
+      ACE_TRY_CHECK;
+
+      PortableServer::POA_var root_poa =
+        PortableServer::POA::_narrow (object.in ()
+                                      ACE_ENV_ARG_PARAMETER);
+      ACE_TRY_CHECK;
+
+      PortableServer::POAManager_var poa_manager =
+        root_poa->the_POAManager (ACE_ENV_SINGLE_ARG_PARAMETER);
+      ACE_TRY_CHECK;
+
+      test_i servant (orb.in (),
+                      root_poa.in ());
+
+      test_var test =
+        servant._this (ACE_ENV_SINGLE_ARG_PARAMETER);
+      ACE_TRY_CHECK;
+
+      CORBA::String_var ior =
+        orb->object_to_string (test.in () ACE_ENV_ARG_PARAMETER);
+      ACE_TRY_CHECK;
+
+      FILE *output_file =
+        ACE_OS::fopen (ior_file, "w");
+      ACE_ASSERT (output_file != 0);
+
+      u_int result =
+        ACE_OS::fprintf (output_file,
+                         "%s",
+                         ior);
+      ACE_ASSERT (result == ACE_OS::strlen (ior));
+
+      ACE_OS::fclose (output_file);
+
+      poa_manager->activate (ACE_ENV_SINGLE_ARG_PARAMETER);
+      ACE_TRY_CHECK;
+
+      orb->run (ACE_ENV_SINGLE_ARG_PARAMETER);
+      ACE_TRY_CHECK;
+    }
+  ACE_CATCHANY
+    {
+      ACE_PRINT_EXCEPTION (ACE_ANY_EXCEPTION, "Exception caught");
+      return -1;
+    }
+  ACE_ENDTRY;
+
+  return 0;
+}
